# AdaptiveResolutionISMs

./: .gitattributes  .gitignore  CMakeLists.txt  DOWNLOAD_MODELS.bat  GENERATE_SLN.bat  GENERATE_SLN_CLEAN.bat  LICENSE.txt  README.md  SETUP.bat  THIRD_PARTY_NOTICES.md  vcpkg-configuration.json  vcpkg.json
App/: CMakeLists.txt
App/Source/: AppLayer.cpp  AppLayer.h  Scenes.h  main.cpp
App/Source/Layer/: AppLayer.cpp  AppLayer.h  UILayer.cpp  UILayer.h
App/Source/Shaders/: BasicPS.hlsl  BasicVS.hlsl  Common.hlsl  GlobalCBuffer.hlsl  basic.hlsl  basic.ps  tri.hlsl  tri.vs
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Event.h  InputEvents.h  InputHandler.cpp  InputHandler.h  Layer.h  Loaders.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SceneComponent.h  Transform.h  Utility.h  Window.cpp  Window.h
Core/Source/Core/Application/: Application.cpp  Application.h
Core/Source/Core/Camera/: Camera.cpp  Camera.h
Core/Source/Core/Component/: SceneComponent.h  Transform.h
Core/Source/Core/Event/: Event.h  InputEvents.h
Core/Source/Core/Input/: InputHandler.cpp  InputHandler.h
Core/Source/Core/Layer/: Layer.h
Core/Source/Core/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Core/Source/Core/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  ModelSystem.cpp  ModelSystem.h  Node.cpp  Node.h
Core/Source/Core/Renderer/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelData.cpp  ModelData.h  Node.cpp  Node.h  RenderItem.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  TextureData.h  Vertex.h
Core/Source/Core/Resource/: Loaders.h  Resource.h  ResourceManager.cpp  ResourceManager.h
Core/Source/Core/Shader/: ShaderCreateInfo.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramData.h  ShaderProgramDesc.h  ShaderResource.h
Core/Source/Core/Shader/Shaders/: BasicPS.hlsl  BasicVS.hlsl  Common.hlsl  GeometryPassPS.hlsl  GeometryPassVS.hlsl  GlobalCBuffer.hlsl  ISMPullPushCS.hlsl  ISMRankingCS.hlsl  ISMSplatCS.hlsl  ISMTransferCS.hlsl  LightingPassPS.hlsl  PointLightShadowPS.hlsl  QuadVS.hlsl  ShadowVS.hlsl  TransparentPS.hlsl
Core/Source/Core/Utility/: Constants.h  Logger.cpp  Logger.h  MyMacros.h  SwapbackArray.h  Timer.h  Utility.h
Core/Source/Core/Window/: Window.cpp  Window.h
PointCloudConverter/: CMakeLists.txt
PointCloudConverter/Source/PointCloudConverter/: Converter.cpp  Converter.h
RMAECalculator/: CMakeLists.txt
RMAECalculator/Source/RMAECalculator/: RMAECalculator.cpp  RMAECalculator.h  main.cpp
